--- a/public/index.html
+++ b/public/index.html
@@ -3,32 +3,46 @@
   <head>
     <title>Tumo Chat</title>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="style/style.css" />
     <script src="scripts/index.js"></script>
   </head>
   <body>
     <header>
-      <img src="style/images/logo_tumo.png" />
+      <img src="images/logo_tumo.png" />
       <h1>Tumo Chat</h1>
-      <img src="style/images/logo_campus.png" />
+      <img src="images/logo_campus.png" />
     </header>
     <div class="body-wrapper">
       <div id="message-feed">
         <div class="message">
-          <p class="message-time">17:04</p>
+          <p class="message-time">17:04 • Anthony</p>
           <p class="message-content">
-            Salut Michel, je suis prêt à faire les pizzas
+            Salut Michel, je suis prêt à faire chauffer les pizzas
+          </p>
+        </div>
+        <div class="message message-me">
+          <p class="message-time">17:07 • Michel</p>
+          <p class="message-content">Super ! Je ramène à boire :)</p>
+        </div>
+        <div class="message message-me">
+          <p class="message-time">17:08 • Michel</p>
+          <p class="message-content">
+            Tu as de la charcut' à la maison ? Si tu veux je prend la terrine
+            que nous a préparé Nicolette, elle est délicieuse ! 😋
           </p>
         </div>
         <div class="message">
-          <p class="message-time">17:07</p>
-          <p class="message-content">Super ! Je ramène à boire :)</p>
+          <p class="message-time">17:12 • Anthony</p>
+          <p class="message-content">
+            Ah nice ça ! On va bien se remplir le bidou !
+          </p>
         </div>
       </div>
       <div class="input-wrapper">
         <div class="input-bar">
           <input type="text" />
-          <div class="input-button"></div>
+          <img class="input-button" src="images/send_button.png" />
         </div>
       </div>
     </div>
