Disabled auto-complete and added placeholder

--- a/public/index.html
+++ b/public/index.html
@@ -38,9 +38,13 @@
           </p>
         </div>
       </div>
-      <form id="message-form" class="input-wrapper">
+      <form id="message-form" class="input-wrapper" autocomplete="off">
         <div class="input-bar">
-          <input id="message-input" type="text" />
+          <input
+            id="message-input"
+            type="text"
+            placeholder="Write something..."
+          />
           <button type="submit" class="input-button">
             <img id="message-send" src="images/send_button.png" />
           </button>
