--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     </header>
     <div class="body-wrapper">
       <div id="message-feed">
+        <!-- MESSAGES EXAMPLES -->
         <div class="message">
           <p class="message-time">17:04 • Anthony</p>
           <p class="message-content">
@@ -37,6 +38,7 @@
             Ah nice ça ! On va bien se remplir le bidou !
           </p>
         </div>
+        <!-- MESSAGES EXAMPLES -->
       </div>
       <form id="message-form" class="input-wrapper" autocomplete="off">
         <div class="input-bar">
